fix menu icon not showing in responsive view

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -1,14 +1,40 @@
-.container {
-    padding: 0 2rem;
-  }
+
+
+.custom-button{
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin: 0;
+  display: inline-block;
+  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+  padding: 18px 50px;
+  border-radius: 12px;
+  cursor: pointer;
+  border: none;
+  transition: ease-in-out 0.15s;
+  outline: 0;
+  color: #ffffff;
+  background-color: #000000;
+}
+
+.custom-button:hover{
+  transform: scale(1.04);
+  color: #ffffff;
+  background-color: #000000;
+}
+.secondary{
+  color: #000000;
+  background-color: rgb(245, 246, 250)              
+}
+
+.full-width{
+  width: 100%;
+}
+
 
   .image {
     border-radius: 50%;
-  }
-
-  .title a {
-    color: #0070f3;
-    text-decoration: none;
   }
   
   .title a:hover,
@@ -88,25 +114,7 @@
     flex-wrap: wrap;
     max-width: 800px;
   }
-  
-  .card {
-    margin: 1rem;
-    padding: 1.5rem;
-    text-align: left;
-    color: inherit;
-    text-decoration: none;
-    border: 1px solid #eaeaea;
-    border-radius: 10px;
-    transition: color 0.15s ease, border-color 0.15s ease;
-    max-width: 300px;
-  }
-  
-  .card:hover,
-  .card:focus,
-  .card:active {
-    color: #0070f3;
-    border-color: #0070f3;
-  }
+
   
   .card h2 {
     margin: 0 0 1rem 0;
@@ -132,7 +140,7 @@
   }
   
   @media (prefers-color-scheme: dark) {
-    .card,
+    
     .footer {
       border-color: #222;
     }
