--- a/styles/main.scss
+++ b/styles/main.scss
@@ -28,6 +28,8 @@ a  {
 
 a:hover {
   border-bottom-color: transparent;
+  color: black;
+  
 }
 
 * {
@@ -77,4 +79,76 @@ a:hover {
 
 .notion-full-page {
   padding-bottom: 0 !important;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.py-25 {
+  padding-top: 25px !important;
+  padding-bottom: 25px !important;
+}
+
+.title{
+  margin: 10px 0;
+  line-height: 1.15;
+  font-size: 4rem;
+  text-align: center;
+  font-weight: bold;
+}
+
+.text{
+  font-size:1.125rem;
+  color:rgba(0, 0, 0, 0.7);
+  white-space:pre-wrap;
+  line-height: 160%;
+  letter-spacing: 0.02em;
+}
+
+.grid-container{
+  display: grid;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.item-card{
+  background-color: #e8ebec00;
+  padding: 30px;
+  cursor: pointer;
+  border-radius: 10px;
+  font-size: 1rem;
+  transition: 0.3s ease-in-out 0s;
+  justify-content: start;
+  display: grid;
+  align-items: center;
+  justify-content: flex-end;
+  grid-template-columns: repeat(6, auto);
+  &:active{
+    box-shadow: rgb(232 235 248 / 90%) 0 0 60px;
+  }
+  &:hover {
+    box-shadow: rgb(232 235 248 / 90%) 0 0 60px;
+  }
+}
+
+.transparent-link{
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+  font-weight: inherit;
+  border-bottom: none;
+  margin: 0;
+  padding: 0;
+}
+
+.list{
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  grid-gap: 0.75rem;
 }
